# projectmongo

Aip/: Cargo.toml
Aip/src/: main.rs
datatest/: Cargo.toml
datatest/src/: main.rs
project/: Cargo.toml
project/src/: main.rs
projectAPI/: .env  Cargo.toml
projectAPI/src/: main.rs
projectAPI/src/api/: user_api.rs
projectAPI/src/repository/: mongodb_repo.rs
