[package]
name = "Aip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
derive = "1.0.0"
dotenv = "0.15.0"
futures = { version = "0.3.25", default-features = false, features = ["async-await"] }
mongod = "0.3.3"
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
warp = "0.3.3"

# actix-web = "4"
# serde = "1.0.136"
# dotenv = "0.15.0"
# futures = "0.3"

# [dependencies.mongodb]
# version = "2.2.0"
# default-features = false
# features = ["async-std-runtime"] 
