[package]
name = "datatest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
bson = "2.5.0"
crate = "0.0.2"
mongodb = "2.3.1"
rand = "0.8.5"
serde = "1.0.152"
tokio = { version = "1.25.0", features = ["full"] }
